--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "request": "2.33.0"
   },
   "spm": {
-    "main": "lib/web-pinyin.js",
+    "main": "lib/pinyin.js",
     "devDependencies": {
       "expect.js": "0.3.1",
       "url": "1.2.0"
@@ -65,6 +65,6 @@
       "object-assign": "~4.0.1"
     }
   },
-  "browser": "lib/web-pinyin.js",
+  "browser": "lib/pinyin.js",
   "license": "MIT"
 }
